# phyto-dex

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  package-lock.json  seed_db.py
scripts/: seed_db.py
src/: backend.rs  data.rs  main.rs
src/components/: add.rs  collection.rs  hero.rs  mod.rs
src/views/: blog.rs  home.rs
